--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -22,21 +22,22 @@ import { USER_SITE } from "../consts";
         ></path>
       </svg>
       <p class="text-sm">
-        Copyright © <a href={USER_SITE} target="_blank" class="font-bold"
+        版权所有 © <a href={USER_SITE} target="_blank" class="font-bold"
           >{USER_NAME}</a
         >
-        {new Date().getFullYear()} - All right reserved
+        {new Date().getFullYear()} - 保留所有权利
       </p>
     </aside>
     <nav>
       <p class="text-sm">
-        Powered by
+        由
         <!-- Thanks for using this template. You can keep this line to support my work :) -->
         <a
           href="https://github.com/EveSunMaple/Frosti"
           target="_blank"
           class="font-bold">Frosti Template ⚡️</a
         >
+        提供支持
       </p>
     </nav>
   </div>
