更新了一大堆东西
3篇文章、title汉化和其他

--- a/src/components/BaseCard.astro
+++ b/src/components/BaseCard.astro
@@ -17,7 +17,7 @@ const {
   word,
   time,
   isBlog = false,
-  comment = false,
+  comment = true,
   url = decodeURIComponent(Astro.url.toString()),
 } = Astro.props as CardInfo;
 const displayDate = dayjs(pubDate).format(DATE_FORMAT);
