--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -66,8 +66,8 @@ const totalPages = Math.ceil(page.total / page.size);
 const pageLinks = generatePageLinks(totalPages);
 ---
 
-<BaseLayout title="Blog">
-  <BaseCard title="search">
+<BaseLayout title="博客">
+  <BaseCard title="搜索">
     <Search
       id="search"
       className="pagefind-ui"
