--- a/src/pages/blog/categories/[category]/[...page].astro
+++ b/src/pages/blog/categories/[category]/[...page].astro
@@ -70,8 +70,8 @@ const totalPages = Math.ceil(page.total / page.size);
 const pageLinks = generatePageLinks(totalPages);
 ---
 
-<BaseLayout title="Category">
-  <BaseCard title="Category">
+<BaseLayout title="分类">
+  <BaseCard title="分类">
     <h1 id="h1">{`${t("label.categoryPage")} - ${params.category}`}</h1>
     <hr />
   </BaseCard>
