--- a/src/pages/blog/tags/[tag]/[...page].astro
+++ b/src/pages/blog/tags/[tag]/[...page].astro
@@ -70,8 +70,8 @@ const totalPages = Math.ceil(page.total / page.size);
 const pageLinks = generatePageLinks(totalPages);
 ---
 
-<BaseLayout title="Tag">
-  <BaseCard title="Tag">
+<BaseLayout title="标签">
+  <BaseCard title="标签">
     <h1 id="h1">{`${t("label.tagPage")} - ${params.tag}`}</h1>
     <hr />
   </BaseCard>
